<?php

declare(strict_types=1);

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        // Many findings per analysed submission, so this FK is indexed but
        // not unique (contrast with ai_detection_results).
        Schema::create('vulnerability_results', function (Blueprint $table) {
            $table->id();
            $table->foreignId('analysis_submission_id')->constrained('analysis_submissions')->cascadeOnDelete();
            $table->string('name');
            $table->text('description')->nullable();
            $table->string('severity', 20);
            $table->string('file_path', 500)->nullable();
            $table->integer('start_line')->nullable();
            $table->integer('start_column')->nullable();
            $table->integer('end_line')->nullable();
            $table->integer('end_column')->nullable();
            $table->timestamp('created_at');

            $table->index('analysis_submission_id');
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('vulnerability_results');
    }
};
